# truck-bridge: C ABI export of the truck geometric kernel.
#
# This crate ONLY exposes a C ABI (cdylib + staticlib).
# C++ (or any other language) wrappers are intentionally NOT provided here —
# consumers build their own RAII layer on top of `include/truck_bridge.h`.
[package]
name = "truck-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "C ABI export of the truck Rust CAD/geometry kernel"
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
publish = false

[lib]
name = "truck_bridge"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Version is pinned (=, not ^): truck is still pre-1.0 and a minor bump may
# change internal layout of types held behind opaque handles. Upgrading truck
# is an explicit, deliberate action.
truck-polymesh = "=0.6.0"

[build-dependencies]
cbindgen = "0.27"

[profile.release]
# Keep unwind so that the per-FFI-function catch_unwind guard can convert
# panics into TruckError instead of aborting the host process.
panic = "unwind"
